fix: fix body overflow at 850px, fix pre book button on offers page

--- a/client/src/styles/Navbar.module.scss
+++ b/client/src/styles/Navbar.module.scss
@@ -99,7 +99,7 @@
   .navbar-container {
     min-height: 60px;
     top: 38px;
-    position: fixed;
+    position: relative;
     .navbar {
       .nav-links {
         position: fixed;
@@ -241,8 +241,9 @@
   }
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 768px) {
   .navbar-container {
+    position: fixed;
     .navbar {
       .nav-links {
         width: 50vw;
